Added Customer API, commented out filter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ management.metrics.export.prometheus.enabled: true
 management.security.enabled=false
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=none
+logging.level.org.springframework.security=DEBUG
