--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,14 @@ dependencies {
 	implementation group: 'com.auth0', name: 'java-jwt', version: '3.8.0'
    	// https://mvnrepository.com/artifact/org.json/json
 	implementation group: 'org.json', name: 'json', version: '20180813'
-
 	
 }
 
+tasks.withType(Jar) {
+   duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+   manifest {
+      attributes["Main-Class"] = "com.webage.App"
+   }
+}
 
